# AgentForensics

./: .env.example  .gitignore  README.md  USERGUIDE.md  agentforensics_launcher.spec  benchdeepset.py  benchmark_latency.py  benchtest.py  benchtest_results.json  deepsetresults.json  install.py  latency_results.json  launcher.py  pyproject.toml
.github/workflows/: ci.yml
agentforensics/: __init__.py  alerting.py  classifier.py  cli.py  differ.py  fingerprinter.py  mcp_server.py  models.py  reporter.py  semantic.py  store.py  tracer.py
agentforensics-vscode/: package-lock.json  package.json  tsconfig.json
agentforensics-vscode/src/: extension.ts
agentforensics/dashboard/: __init__.py  server.py  ui.html
agentforensics/integrations/: __init__.py  autogen_tracer.py  langchain_handler.py
agentforensics/model/: config.json  tokenizer_config.json
scripts/: download_model.py
tests/: conftest.py  test_alerting.py  test_classifier.py  test_dashboard.py  test_differ.py  test_fingerprinter.py  test_integrations.py  test_reporter.py  test_store.py  test_tracer.py
